{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 155,
  "lineage": "1ddf6525-b92a-56d9-d74f-292b08f66263",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iap_tcp_forwarding",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8888"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-11T13:08:11.003-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/core-trees-404818/global/firewalls/allow-ingress-from-iap",
            "log_config": [],
            "name": "allow-ingress-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
            "priority": 1000,
            "project": "core-trees-404818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/firewalls/allow-ingress-from-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "iap"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_netblock_ip_ranges.iap-forwarders",
            "google_compute_network.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "lb_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-11T13:08:11.021-08:00",
            "deny": [],
            "description": "Allow health checks from GCP LBs",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/core-trees-404818/global/firewalls/allow-health-check",
            "log_config": [],
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
            "priority": 1000,
            "project": "core-trees-404818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/firewalls/allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_netblock_ip_ranges.health-checkers",
            "google_compute_network.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "iap-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/zones/us-central1-c/disks/gke-iap-proxy"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/core-trees-404818/zones/us-central1-c/instances/gke-iap-proxy",
            "instance_id": "1609087922682876852",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "Y5fzDtLmRfY=",
            "metadata_startup_script": "#! /bin/bash\n\napt update\napt install -y tinyproxy\n\n# https://serverfault.com/questions/1055510/tinyproxy-error-unable-to-connect-to-the-server-access-denied\ngrep -qxF 'Allow localhost' /etc/tinyproxy/tinyproxy.conf || echo 'Allow localhost' \u003e\u003e /etc/tinyproxy/tinyproxy.conf\nsystemctl restart tinyproxy\n",
            "name": "gke-iap-proxy",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
                "network_ip": "192.168.100.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-iap-subnet",
                "subnetwork_project": "core-trees-404818"
              }
            ],
            "project": "core-trees-404818",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/zones/us-central1-c/instances/gke-iap-proxy",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "iap"
            ],
            "tags_fingerprint": "pHcV0Hjcy9w=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.k8s_vpc",
            "google_compute_router.k8s_vpc_router",
            "google_compute_router_nat.k8s_vpc_router_nat",
            "google_compute_subnetwork.iap_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
            "mtu": 0,
            "name": "pw-k8s-k8s-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "core-trees-404818",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "k8s_vpc_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-11T13:08:11.037-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/core-trees-404818/regions/us-central1/routers/pw-k8s-vpc-router",
            "name": "pw-k8s-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
            "project": "core-trees-404818",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/regions/us-central1/routers/pw-k8s-vpc-router"
          },
          "dependencies": [
            "google_compute_network.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "k8s_vpc_router_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "core-trees-404818/us-central1/pw-k8s-vpc-router/pw-k8s-vpc-router-nat",
            "log_config": [
              {
                "enable": false,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "pw-k8s-vpc-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "core-trees-404818",
            "region": "us-central1",
            "router": "pw-k8s-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.k8s_vpc",
            "google_compute_router.k8s_vpc_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "iap_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-11T13:08:11.115-08:00",
            "gateway_address": "192.168.100.1",
            "id": "projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-iap-subnet",
            "ip_cidr_range": "192.168.100.0/29",
            "name": "pw-k8s-iap-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "core-trees-404818",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-iap-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-11T13:08:11.175-08:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-subnet",
            "ip_cidr_range": "192.168.0.0/24",
            "name": "pw-k8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "core-trees-404818",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/20",
                "range_name": "gke-pw-k8s-services-5a722563"
              },
              {
                "ip_cidr_range": "10.0.0.0/16",
                "range_name": "gke-pw-k8s-pods-5a722563"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_only_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-11-11T13:08:11.224-08:00",
            "gateway_address": "192.168.254.1",
            "id": "projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-proxy-only-subnet",
            "ip_cidr_range": "192.168.254.0/23",
            "name": "pw-k8s-proxy-only-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "core-trees-404818",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-proxy-only-subnet"
          },
          "dependencies": [
            "google_compute_network.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "psc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-11-11T13:08:11.214-08:00",
            "gateway_address": "192.168.253.1",
            "id": "projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-psc-subnet",
            "ip_cidr_range": "192.168.253.0/26",
            "name": "pw-k8s-psc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/global/networks/pw-k8s-k8s-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "core-trees-404818",
            "purpose": "PRIVATE_SERVICE_CONNECT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-trees-404818/regions/us-central1/subnetworks/pw-k8s-psc-subnet"
          },
          "dependencies": [
            "google_compute_network.k8s_vpc"
          ]
        }
      ]
    }
  ]
}